--- a/ui/html/partial/nav.tmpl
+++ b/ui/html/partial/nav.tmpl
@@ -4,6 +4,9 @@
         <a href="/">Home</a>
         {{if .IsAuthenticated}}
         <a href="/snippet/create">Create snippet</a>
+        <a href="/about">About</a>
+        {{else}}
+        <a href="/about">About</a>
         {{end}}
     </div>
     <div>
