account page with information about user logged in

--- a/ui/html/partial/nav.tmpl
+++ b/ui/html/partial/nav.tmpl
@@ -2,18 +2,17 @@
 <nav>
     <div>
         <a href="/">Home</a>
+        <a href="/about">About</a>
         {{if .IsAuthenticated}}
         <a href="/snippet/create">Create snippet</a>
-        <a href="/about">About</a>
-        {{else}}
-        <a href="/about">About</a>
         {{end}}
     </div>
     <div>
         {{if .IsAuthenticated}}
+        <a href='/account/view'>Account</a>
         <form action='/user/logout', method='POST'>
         <input type='hidden' name='csrf_token' value='{{.CSRFToken}}'>
-            <button>logout</button>
+            <button>Logout</button>
         </form>
         {{else}}
             <a href='/user/signup'>Signup</a>
