--- a/ui/html/pages/account.tmpl
+++ b/ui/html/pages/account.tmpl
@@ -13,13 +13,9 @@
         <tr>
         <th>Joined</th><td>{{humanDate .Created}}</td>
         </tr>
-
         <tr>
-
+        <th>Password</th><td><a href='/account/password/update'>Change password</a>
         </tr>
-
-
-
     </table>
 
 {{end}}
